--- a/css/Desktop.CSS
+++ b/css/Desktop.CSS
@@ -16,7 +16,6 @@ body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-
 /************* Header Page *******************/
 header {
   width: 100%;
@@ -71,9 +70,10 @@ header > ul > a:hover {
   opacity: 1;
 }
 
-header > button {
+#Btn {
     display: none;
   }
+
 
 
 /************* Home Page *******************/
@@ -142,7 +142,6 @@ img:nth-child(5) {
   animation-delay: 8s;
 }
 
-
 /************* About Page *******************/
 #About {
   height: 90vh;
@@ -180,9 +179,7 @@ img:nth-child(5) {
   background-size: cover;
 }
 
-
 /************* Instock Page *******************/
-
 #In_Stock {
   height: 100vh;
   width: 100%;
@@ -529,6 +526,11 @@ img:nth-child(5) {
   height: 70px;
   justify-content: space-around;
   /* background-color: red; */
+}
+
+.fa {
+  font-size: 30px;
+  color: white;
 }
 
 .forAk {
