--- a/css/Mobile.CSS
+++ b/css/Mobile.CSS
@@ -4,14 +4,25 @@
       display: flex;
     }
 
+    .logo Img {
+      margin-left: 15px;
+      width: 42px;
+      height: 40px;
+    }
+
+    .logo h3 {
+      font-size: 20px;
+      font-weight: 500;
+    }
+
     #Btn {
       display: flex;
-      margin-right: 50px;
+      margin-right: 30px;
     }
 
     .fa-bars {
       font-size: 40px;
-      color: yellow;
+      color: #FAC72D;
     }
 
     header > ul {
@@ -22,8 +33,8 @@
       position: absolute;
       top: 10vh;
       width: 100%;
-      height: 50vh;
-      background-color: orange;
+      height: 60vh;
+      background-color: #ffc001;
     }
 
     header > ul.show {
@@ -31,8 +42,8 @@
     }
 
     header > ul > a {
-      border-bottom: 2px solid white;
-      color: white;
+      border-bottom: 2px solid brown;
+      color: brown;
       opacity: 0.8;
       text-decoration: none;
       transform: scale(1);
@@ -65,20 +76,23 @@
       height: 50%;
       display: flex;
       justify-content: center;
+      /* background: red; */
+      margin-top: -50px;
     }
     
     .aboutin1 p {
       font-weight: 200px;
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      font-size: 15px;
-      line-height: 25px;
-      margin-top: 20px;
+      font-size: 13px;
+      line-height: 17px;
+      margin-top: 10px;
       text-align: center;
     }
 
     .aboutin2 {
-      width: 35%;
+      width: 100%;
       height: 50%;
+      background-size: 200px;
     }
 
     #In_Stock {
@@ -115,7 +129,7 @@
     .stockImg img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
     }
 
     .stockDetails {
@@ -181,5 +195,9 @@
       font-size: 20px;
       /* color: brown; */
       margin-top: 25px;
+    }
+
+    .social {
+      margin-top: 20px;
     }
 }
